--- a/project.yml
+++ b/project.yml
@@ -16,6 +16,11 @@ settings:
     debug:
       DEBUG_INFORMATION_FORMAT: "dwarf-with-dsym"
 
+packages:
+  ID3TagEditor:
+    url: https://github.com/chicio/ID3TagEditor
+    from: 4.1.1
+
 targets:
   mp3TagEditor:
     type: application
@@ -49,7 +54,8 @@ targets:
     configs:
       Debug:
         OTHER_SWIFT_FLAGS: $(inherited) -Xfrontend -warn-long-expression-type-checking=500 -Xfrontend -warn-long-function-bodies=500
-    dependencies: []
+    dependencies:
+      - package: ID3TagEditor
 
   mp3TagEditorTests:
     type: bundle.unit-test
